--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,13 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="init.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=GA_MEASUREMENT_ID"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4EHHPX229N"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){window.dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', `${process.env.REACT_APP_GA_CODE}`);
+      gtag('config', 'G-4EHHPX229N');
     </script>
   </body>
 </html>
